<resources>
    <string name="app_name">Ranobe downloader</string>
    <string name="hint_text">paste the link to a light novel</string>
    <string name="paste_link">paste link</string>
    <string name="search">search</string>
    <string name="please_paste_a_link">please paste a link</string>
    <string name="invalid_url">please enter a valid url</string>
    <string name="website_not_supported">we do not yet support this website</string>
    <string name="novel_cover_desc">novel cover</string>
    <string name="paste">paste</string>
    <string name="save_novel_question">would you like to save this novel?</string>
    <string name="yes">yes</string>
    <string name="select_destination_title">select destination</string>
    <string name="select_dir_summary">select the directory to save the exported novel to, make sure you have enough storage space. please allow permission to save this novel.</string>
    <string name="continue_text">continue</string>
    <string name="time_consuming_text">depending on the number of chapters this could take a while \n\ndo not close the app while the downloading is in progress. thanks!</string>
    <string name="open">open</string>
    <string name="see_available_sources">see available sources</string>
    <string name="working_title">how does it work?</string>
    <string name="step_1">step 1</string>
    <string name="step_one_summary">paste link of light novel you would like to download from your favourite website.</string>
    <string name="step_2">step 2</string>
    <string name="step_two_summary">we connect to website and read all relevant data and create a readable epub from all the chapters</string>
    <string name="step_3">step 3</string>
    <string name="step_three_summary">you can import the epub in your favourite epub reader</string>
    <string name="source_not_supported">this source is not supported, see sources list</string>
    <string name="start_typing">start typing…</string>
    <string name="search_novel">search novel</string>
    <string name="search_novel_summary">enter the name of the novel you are looking for</string>
    <string name="watch_video_title">watch video to continue</string>
    <string name="watch_video_summary">watch a video ad to continue with the download, this helps the app be free while supporting your purpose. thanks for watching the ad.</string>
</resources>