<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context="org.ranobe.downloader.ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="@dimen/padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_link"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/paste_link"
                    android:labelFor="@id/ed_link"
                    app:boxCornerRadiusBottomEnd="@dimen/radius"
                    app:boxCornerRadiusBottomStart="@dimen/radius"
                    app:boxCornerRadiusTopEnd="@dimen/radius"
                    app:boxCornerRadiusTopStart="@dimen/radius"
                    app:placeholderText="@string/hint_text"
                    app:startIconDrawable="@drawable/ic_link">

                    <EditText
                        android:id="@+id/ed_link"
                        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textUri" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/see_sources"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/see_available_sources"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="?colorPrimary"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/paste"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin"
                        android:text="@string/paste"
                        app:icon="@drawable/ic_paste" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search"
                        app:icon="@drawable/ic_search" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:contentPadding="@dimen/padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_novel"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_novel_summary"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/search_view"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="@dimen/radius"
                    app:boxCornerRadiusBottomStart="@dimen/radius"
                    app:boxCornerRadiusTopEnd="@dimen/radius"
                    app:boxCornerRadiusTopStart="@dimen/radius"
                    app:endIconDrawable="@drawable/ic_search"
                    app:endIconMode="custom"
                    app:placeholderText="@string/start_typing">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/search_field"
                        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:lines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:contentPadding="@dimen/padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="@dimen/padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/working_title"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/step_1"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_one_summary"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/step_2"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_two_summary"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/step_3"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_three_summary"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>