<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ranobe.downloader.ui.download.DownloadActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:orientation="vertical"
        android:paddingBottom="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <RelativeLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/novel_cover_header"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:adjustViewBounds="true"
                    android:alpha="0.4"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/novel_cover_layout"
                        style="@style/Widget.Material3.CardView.Outlined"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="25dp">

                        <ImageView
                            android:id="@+id/novel_cover"
                            android:layout_width="112dp"
                            android:layout_height="165dp"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop" />

                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="?colorOnSurfaceVariant" />

                        <TextView
                            android:id="@+id/novel_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textColor="?colorOnSurface"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <RatingBar
                            android:id="@+id/rating"
                            style="@style/Widget.AppCompat.RatingBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/authors"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="?colorPrimary"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header_layout"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textIsSelectable="true" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/save_novel_layout"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/radius"
                app:contentPadding="@dimen/padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/save_novel_question"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_yes_save_novel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/yes" />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/download_novel_layout"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/radius"
                app:contentPadding="@dimen/padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time_consuming_text"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

                    <TextView
                        android:id="@+id/tv_chapter_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.Material3.LabelSmall" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/download_progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="false" />

                    <TextView
                        android:id="@+id/download_percentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textAppearance="@style/TextAppearance.Material3.LabelSmall" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>